--- a/src/App/components/ContentWindow/_Tabbed/_tabbed-window-content.scss
+++ b/src/App/components/ContentWindow/_Tabbed/_tabbed-window-content.scss
@@ -3,6 +3,7 @@
 
 .tabbedWindowContent {
   max-height: 100%;
+  flex: 0 0 100%;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
